fixed tab spacing

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@
         margin-right: auto;
     }
 }
+
+.full-space-tab {
+    width: 100%;
+}
